--- a/styles/style.css
+++ b/styles/style.css
@@ -187,3 +187,46 @@ body {
 .blog-section .right-column article .time {
     margin-right: 40px;
 }
+
+
+
+
+/* ----------- Footer ------------- */
+footer {
+    background-color: #161616;
+    margin-top: 130px;
+}
+
+footer .container {
+    text-align: center;
+    padding: 130px 0;
+}
+
+footer .container h2 {
+    color: #fff;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+footer .container ul {
+    padding: 0;
+    margin: 0;
+}
+
+footer .container ul li {
+    list-style: none;
+    display: inline;
+    padding: 0 25px;
+}
+
+footer .container ul li a {
+    text-decoration: none;
+    color: #B9B9B9;
+}
+
+footer .container hr {
+    margin: 0;
+    margin-bottom: 30px;
+    border-color: #FFFFFF;
+    opacity: 10%;
+}
