--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@ body {
     border-radius: 10px;
     align-items: center;
     margin-bottom: 130px;
+    margin-top: 50px;
 }
 
 .slider-section .text-column {
@@ -44,7 +45,7 @@ body {
 
 }
 
-.slider-section .text-column p {
+.slider-section .text-column .lg-text {
     color: #fff;
     font-size: 16px;
     font-weight: 400;
@@ -52,6 +53,17 @@ body {
     margin: 0;
     margin-top: 20px;
     margin-bottom: 30px;
+}
+
+.slider-section .text-column .md-text {
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin: 0;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    display: none;
 }
 
 .slider-section .text-column .slider-btn {
@@ -116,7 +128,6 @@ body {
     margin-bottom: 30px;
     border-radius: 5px;
     text-align: center;
-    padding: 10px;
 }
 
 .blog-section .left-column .nav-bar ul li:last-child {
@@ -128,6 +139,8 @@ body {
     font-size: 20px;
     font-weight: 500;
     color: #161616;
+    padding: 10px 18px;
+    display: block;
 }
 
 .blog-section .left-column #active {
@@ -138,7 +151,7 @@ body {
     color: #fff;
 }
 
-.blog-section .row {
+.blog-section .main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 25px;
@@ -167,7 +180,14 @@ body {
     border-radius: 5px;
     font-size: 16px;
     font-weight: 500;
+    transition: .4s;
     font-family: 'Raleway', sans-serif;
+}
+
+.blog-section .right-column article button:hover {
+    background: #161616;
+    border: 1px solid #161616;
+    color: #fff;
 }
 
 .blog-section .right-column article h3 {
@@ -187,6 +207,14 @@ body {
 .blog-section .right-column article .time {
     margin-right: 40px;
 }
+
+.blog-section .right-column .button {
+    display: none;
+}
+
+
+
+
 
 
 
@@ -274,4 +302,140 @@ upcoming page
     font-size: 16px;
     font-weight: 400;
     color: #4D4D4D;
+}
+
+
+
+
+@media only screen and (max-width: 1200px) {
+    .slider-section .text-column {
+        padding: 60px 0 60px 60px;
+    }
+
+    .slider-section .text-column h1 {
+        font-size: 50px;
+        line-height: 60px;
+    }
+
+    .slider-section .image-column {
+        padding: 30px 40px 0 0;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+
+    /* slider section */
+    .slider-section {
+        margin-bottom: 70px;
+    }
+
+    .slider-section .text-column {
+        padding: 50px 0 50px 50px;
+    }
+
+    .slider-section .text-column h1 {
+        font-size: 40px;
+        line-height: 50px;
+    }
+
+    .slider-section .text-column .md-text {
+        display: block;
+    }
+
+    .slider-section .text-column .lg-text {
+        display: none;
+    }
+
+    .slider-section .image-column {
+        padding: 50px 20px 0 0;
+    }
+
+
+
+
+
+    /* blog section */
+    .blog-section .main {
+        grid-template-columns: repeat(2, 1fr);
+        margin: 0;
+    }
+
+    .container .blog-section {
+        display: block;
+    }
+
+    .blog-section .left-column {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .blog-section .left-column ul {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 25px;
+    }
+
+    .blog-section .left-column .nav-bar {
+        background: transparent;
+        padding: 0;
+    }
+
+    .blog-section .left-column .nav-bar ul li {
+        margin-bottom: 0;
+    }
+
+    .blog-section .left-column .nav-bar ul li {
+        background-color: transparent;
+        border: 1px solid #00000038;
+    }
+
+    .blog-section .left-column ul li a {
+        padding: 12px 30px !important;
+        display: block;
+    }
+
+    .blog-section .right-column {
+        margin-left: 0;
+    }
+
+    .blog-section .right-column .button {
+        display: block;
+    }
+
+    .blog-section .right-column .button .md-button {
+        padding: 12px 35px;
+        font-weight: 700;
+        font-size: 16px;
+        background-color: #FF8278;
+        color: #fff;
+        border: 2px solid #FF8278;
+        border-radius: 5px;
+        transition: .4s;
+        font-family: 'Raleway', sans-serif;
+    }
+
+    .blog-section .right-column .button {
+        display: block;
+        text-align: center;
+        margin-top: 50px;
+    }
+
+    .blog-section .right-column .button .md-button:hover {
+        background-color: transparent;
+        color: #FF8278;
+        border: 2px solid #FF8278;
+    }
+
+
+
+    /* footer */
+    footer {
+        margin-top: 70px;
+    }
+
+    footer .container {
+        padding-top: 30px;
+        padding-bottom: 60px;
+    }
+
 }
